bug 78078 : 3.1M3 Cannot launch runtime workspace